Mon Jan 07 09:08:01 GMT 2013  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* examples/quest.cc: Add --flags command line option to allow setting
	  arbitrary QueryParser flags.
	* examples/quest.cc: Need <algorithm> for lower_bound().
	* examples/quest.cc: Align option descriptions in --help output, and
	  make the initial letter of such descriptions consistently lowercase.

Mon Jan 07 08:52:14 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/valuerangeproc.cc: Move 3 declarations to where we first use the
	  variables.

Mon Jan 07 08:46:00 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/multimatch.cc: We no longer use the highest weighted
	  MSet entry to calculate percentages, so stop searching for it.
	  (Spotted by cppcheck)

Mon Jan 07 08:28:36 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
	  Remove unused variables (spotted by cppcheck).

Mon Jan 07 08:23:56 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/maptermlist.h,api/matchspy.cc,api/omdatabase.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_positionlist.cc,
	  backends/multi/multi_postlist.cc,backends/remote/net_termlist.cc,
	  bin/xapian-delve.cc,matcher/exactphrasepostlist.cc,
	  matcher/mergepostlist.cc,matcher/phrasepostlist.cc,
	  tests/harness/backendmanager.cc: Prefer ++i to i++.

Fri Jan 04 05:41:41 GMT 2013  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* HACKING,Makefile.am: With lcov 1.10, we no longer need any of our
	  hacky workarounds, so make this a requirement and simplify the rules
	  in the makefile.
	* Makefile.am: Pass -f to lcov, which should avoid the need for the
	  patch we've been applying to lcov.

Fri Jan 04 03:54:07 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk: