@@ -1,7 +1,7 @@
 if VPATH_BUILD
 # We need this so that generated sources can find non-generated headers and
 # non-generated sources can find generated headers in a VPATH build from SVN.
-INCLUDES += -I$(top_srcdir)/languages -Ilanguages
+AM_CPPFLAGS += -I$(top_srcdir)/languages -Ilanguages
 endif
 
 noinst_HEADERS +=\
